# MinimumHeadroom

./: .gitignore  README.md  config.yaml  package.json
.github/workflows/: test.yml
asr-worker/: README.md  pyproject.toml
assets/kokoro/: README.md
doc/: SPEC.md  multi-agent-orchestration-spec.md
doc/diagrams/: high-level-flow.mmd  sequence-timeline.mmd
doc/examples/: AGENTS.sample.md  AGENT_RULES.md
doc/guides/: multi-agent.md  operator-stack.md  tts-and-speech.md
face-app/public/: agent_dashboard_action_feedback.js  agent_dashboard_actions.js  agent_dashboard_apply_result.js  agent_dashboard_face_renderer.js  agent_dashboard_feed.js  agent_dashboard_observed.js  agent_dashboard_state.js  agent_face_identity.js  agent_face_store.js  app.js  browser_audio_policy.js  face_appearance_defaults.js  face_idle_motion.js  face_rig.js  gesture_controls.js  index.html  operator_ansi.js  operator_asr_text.js  (+7 more)
scripts/: codex-notify-to-face.mjs  restart-operator-stack-in-place.sh  run-asr-worker.sh  run-face-app.sh  run-mcp-server.sh  run-operator-bridge.sh  run-operator-once.sh  run-operator-stack.sh  run-tts-worker.sh  run-vllm-voxtral.sh  setup-qwen3-tts.sh  setup-realtime-asr.sh  setup.sh  tts-asr-loop-check.mjs  tts-asr-loop-lib.mjs  tts-realtime-asr-loop-check.mjs
tts-worker/: README.md  pyproject.toml
tts-worker/src/tts_worker/: __init__.py  __main__.py  chunking.py  engine.py  kokoro_engine.py  playback.py  protocol.py  qwen3_engine.py  qwen3_text.py  shared_text.py
tts-worker/tests/: test_qwen3_engine.py  test_qwen3_text.py  test_shared_text.py
(+55 files in other folders)
