[project]
name = "minimum-headroom-tts-worker"
version = "0.1.0"
description = "Minimum Headroom phase3 tts worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "kokoro-onnx>=0.4.5",
  "misaki>=0.9.4",
  "pyopenjtalk>=0.4.1",
  "fugashi>=1.3.2",
  "jaconv>=0.4.0",
  "mojimoji>=0.0.13",
  "numpy>=2.0.0",
  "sounddevice>=0.4.7",
  "soundfile>=0.12.1",
]

[project.scripts]
tts-worker = "tts_worker.__main__:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_worker"]
